fix profile page and z-indexes

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,5 +11,5 @@
 	top: 0;
 	right: 0;
 	cursor: pointer;
-	z-index: 3;
+	z-index: 2;
 }
